upgraded dependencies, fixed layout focus/enter layout issues, changed ui a bit

--- a/client-dev/less/keyframeAnimations.less
+++ b/client-dev/less/keyframeAnimations.less
@@ -59,3 +59,13 @@
   50% { width: 16px; height: 16px; border-radius: 15px; top:6px; left: 6px; }
   100% { width: 10px; height: 10px; border-radius: 15px; top:9px; left: 9px; }
 }
+
+
+
+// SHAKE NAV BUTTON ARROWS
+@-webkit-keyframes shakeArrow
+{
+  0% { right: 0px }
+  50% { right: 5px }
+  100% { right: 0px }
+}
