--- a/client-dev/less/variables.less
+++ b/client-dev/less/variables.less
@@ -31,7 +31,7 @@
 
 
 
-@icon-font-path:          "../bower_components/twitter/fonts/";
+@icon-font-path:          "../bower_components/twitter/dist/fonts/";
 
 
 @code-font: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif ;
